--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
   "description": "http-client via es fetch",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": ["lib/**/*"],
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
-   "build": "tsc",
-   "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-   "lint": "tslint -p tsconfig.json",
-   "prepare": "npm run build",
-   "prepublishOnly": "npm test && npm run lint",
-   "preversion": "npm run lint",
-   "version": "npm run format && git add -A src",
-   "postversion": "git push && git push --tags"
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
-  "keywords": ["fetch", "http-client"],
+  "keywords": [
+    "fetch",
+    "http-client"
+  ],
   "author": "protoconstructor",
   "license": "ISC",
   "devDependencies": {
+    "@types/jquery-param": "^1.0.2",
     "@types/node": "^14.0.23",
     "jquery-param": "^1.1.2",
     "prettier": "^2.0.5",
