--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "http-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "http-client via es fetch",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
