--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "http-client",
+  "name": "pctor-http-client",
   "version": "1.0.2",
   "description": "http-client via es fetch",
   "main": "lib/index.js",
